--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div><button class="doi">2</button></div>
     <div><button class="unu">1</button></div>
     <div><button class="zero">0</button></div>
+    <div><button class="sterge">C</button></div>
 
 </div>
 
