--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div><button class="scadere">-</button></div>
     <div><button class="inmultire">*</button></div>
     <div><button class="impartire">/</button></div>
-    <div><button class="rezultat">Total</button></div>
+    <div><span class="result"></span></div>
     <div><button class="noua">9</button></div>
     <div><button class="opt">8</button></div>
     <div><button class="sapte">7</button></div>
