refactored index.html, only usefult elements remains; added style.css; js file refactored and now it works

--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Title</title>
 </head>
 <body>
-<div>
-    <div><input type="number" class="input1" value="default"></div>
-    <div><input type="number" class="input2" value="default"></div>
+    <h2>Calculator</h2>
+<div class="inputContainer">
+    <input type="text" class="input1" placeholder="numarul 1">
+    <input type="text" class="input2" placeholder="numarul 2">
+</div>
 
+<div class="container">
+    <button class="adunare">+</button>
+    <button class="scadere">-</button>
+    <button class="inmultire">*</button>
+    <button class="impartire">/</button>
 
-    <div><button class="adunare">+</button></div>
-    <div><button class="scadere">-</button></div>
-    <div><button class="inmultire">*</button></div>
-    <div><button class="impartire">/</button></div>
-    <div><span class="result"></span></div>
-    <div><button class="noua">9</button></div>
+    <!-- <div><button class="noua">9</button></div>
     <div><button class="opt">8</button></div>
     <div><button class="sapte">7</button></div>
     <div><button class="sase">6</button></div>
@@ -25,9 +28,10 @@
     <div><button class="doi">2</button></div>
     <div><button class="unu">1</button></div>
     <div><button class="zero">0</button></div>
-    <div><button class="sterge">C</button></div>
-
+    <div><button class="sterge">C</button></div> -->
+    
 </div>
+<p class="result"></p>
 
     <script src="script.js"></script>
 
